Package version updated. Fixed major bug in mapToTranscript() in bedgraph2norm() where the absence of the option ignore.strand=FALSE could produce erroneous results. bed_to_TranscriptDb() is now using makeTxDb() instead of makeTranscriptDb(). Updated NEWS file. Added CITATION.
From: Nikos Sidiropoulos <nikos.sidiro@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_1/madman/Rpacks/RNAprobR@107070 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,19 @@
+CHANGES IN VERSION 1.1.2
+-----------------------
+
+BUG FIXES
+
+    o Fixed a bug in bedgraph2norm() by adding 'ignore.strand = "FALSE"' the
+      absence of which could produce erroneous results.
+
+MISC
+
+    o Added CITATION
+
+
 CHANGES IN VERSION 0.99.4
 -----------------------
 
 NEW FEATURES
 
-   o BED2txDb is now using rtracklayer fucntion import() to load BED files.
+    o BED2txDb is now using rtracklayer fucntion import() to load BED files.
